--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -884,3 +884,56 @@
 		prioritization.
 	}
 }
+@article{Wong_2025,
+	title        = {
+		Sentinel imagery detects the presence of live trees following large wildfires
+		in {California}
+	},
+	author       = {
+		Wong, Christopher Y S and Wright, Micah C and van Mantgem, Phillip J and
+		Latimer, Andrew M and Young, Derek J N
+	},
+	year         = 2025,
+	month        = {may},
+	journal      = {Environmental Research: Ecology},
+	publisher    = {IOP Publishing},
+	volume       = 4,
+	number       = 2,
+	pages        = {025006},
+	doi          = {10.1088/2752-664X/add5fd},
+	url          = {https://dx.doi.org/10.1088/2752-664X/add5fd},
+	abstract     = {
+		Identifying live tree presence following wildfire is important for burn
+		damage assessments and decision making, as these trees serve as seed sources
+		for recovery. Satellite-based remote sensing offers an efficient means to
+		assess burn severity with products representing vegetation greenness and
+		char/ash presence and their change from pre- to post-fire imagery. While
+		effective at assessing burn severity (e.g. ecosystem change), there remain
+		limitations in identifying fire refugia (surviving trees), due to the
+		difficulty of teasing apart different green vegetation types (e.g. trees,
+		shrubs, grasses). In this paper, we use 10 m Sentinel-2 satellite data to
+		predict live tree presence across three sites impacted by the 2021 California
+		fire season. We used vegetation indices (VIs) from post-fire imagery
+		(normalized difference vegetation index [NDVI], normalized burn ratio [NBR],
+		normalized difference water index [NDWI], visible atmospherically resistant
+		index [VARI], and burn area index [BAI]), differential VIs from pre- and
+		post-fire imagery (dNDVI, dNBR, RdNBR, dNDWI, dVARI), and direct reflectance
+		bands (all bands model; visible, near-infrared, and shortwave infrared;
+		B1–B12) to predict live tree presence via random forest modeling. To
+		calibrate and validate the random forest models, we photointerpreted ∼2300
+		pixels per fire region using 2022 National Agriculture Imagery Program
+		imagery. We performed additional field-based validation using tree
+		presence/absence data two years post-fire (n = 296 observations across two
+		sites). At the site level, the all bands model outperformed the vegetation
+		index-based models (80%–85% vs 65%–79% accuracy). Errors were mainly false
+		positives attributed to pixels with green understory vegetation but no live
+		trees. In cross-site inference, which involved pooling two sites for model
+		calibration to test on the third site, the all bands model retained good
+		performance (76%–81% accuracy). Evaluation against field survey data
+		demonstrated a larger range of performance (50%–87% accuracy) that highlights
+		limitations based on tree isolation and crown percent greenness. Relative to
+		differential-based VIs, our results highlight potential advantages of using
+		post-fire Sentinel-2 imagery and random forest modeling for identifying live
+		tree presence and scaling to full fire extents.
+	}
+}
