--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -937,3 +937,56 @@
 		tree presence and scaling to full fire extents.
 	}
 }
+@article{10.3389/fsoil.2025.1548645,
+	title        = {
+		Can drone images predict within-field variability in soil fertility? A case
+		study in the {Northern Region of Ghana}
+	},
+	author       = {
+		Kassim, Yussif Baba  and Pinto, Francisco  and MacCarthy, Dilys S.  and
+		Bindraban, Prem  and Chirinda, Ngonidzashe  and Stomph, TjeerdJan  and
+		Struik, Paul C.
+	},
+	year         = 2025,
+	journal      = {Frontiers in Soil Science},
+	volume       = {Volume 5 - 2025},
+	doi          = {10.3389/fsoil.2025.1548645},
+	issn         = {2673-8619},
+	url          = {
+		https://www.frontiersin.org/journals/soil-science/articles/10.3389/fsoil.2025.1548645
+	},
+	abstract     = {
+		BackgroundSoil fertility varies within fields of smallholder farmers in
+		Africa. Drone-based field mapping may quantify this within-field variability
+		with high resolution. This study analyzed if variation in spectral vegetation
+		indices from early season weed cover could offer criteria to quickly assess
+		heterogeneity in soil fertility. We tested (i) whether within field spatial
+		patterns in early season weed cover and soil organic matter could be
+		correlated and (ii) whether predicted soil organic matter could indicate
+		within-field heterogeneity in crop yields.MethodsWe collected images of early
+		season weed cover using a DJI Phantom 4 proV2 drone and data on maize and
+		soybean final above-ground biomass from on-farm experiments, conducted in
+		Bognaayili and Gauwogo (northern Ghana), during 2022 and 2023 cropping
+		seasons. There were eight experiments in total, i.e., two of each crop at
+		each site and in each year. In these experiments, we varied planting density,
+		variety, mulching, ridging, and fertilizer application, as management options
+		to increase productivity. Spectral vegetation indices extracted from early
+		season weed cover were used to predict soil organic matter.ResultsVariation
+		in spectral vegetation indices from early season weed cover was higher in
+		Bognaayili than in Gauwogo. Predicted soil organic matter from a model built
+		with spectral vegetation indices had a significant relationship (Radj2 =
+		0.54) with measured soil organic matter in Bognaayili, but not in Gauwogo. In
+		Bognaayili, predicted soil organic matter was significantly and positively
+		correlated with soybean above-ground biomass in 2022 (r = 0.53) and 2023 (r =
+		0.65). There was no relationship observed between predicted soil organic
+		matter and maize above-ground biomass.ConclusionsThe use of spectral
+		vegetation indices from early season weed cover images as proxy for
+		within-field variation in soil organic matter is a promising option although
+		it still requires some soil sampling for organic matter analysis.
+		Incorporating drone-based early season weed cover assessment into field crop
+		experimentation by researchers, to explore inherent soil organic matter
+		variations would lead to detailed understanding of the characteristics and
+		delineation of areas with lower or higher productivity in regions where soil
+		organic matter is limiting crop productivity.
+	}
+}
