--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -990,3 +990,57 @@
 		organic matter is limiting crop productivity.
 	}
 }
+@article{doi:10.1073/pnas.2417203122,
+	title        = {
+		Mapping encounters between {Antarctic} krill fishing vessels and
+		air-breathing krill predators using acoustic data from the fishery
+	},
+	author       = {
+		Dominik Bahlburg  and Sebastian Menze  and Bjørn A. Krafft  and Andy D.
+		Lowther  and Bettina Meyer
+	},
+	year         = 2025,
+	journal      = {Proceedings of the National Academy of Sciences},
+	volume       = 122,
+	number       = 25,
+	pages        = {e2417203122},
+	doi          = {10.1073/pnas.2417203122},
+	url          = {https://www.pnas.org/doi/abs/10.1073/pnas.2417203122},
+	eprint       = {https://www.pnas.org/doi/pdf/10.1073/pnas.2417203122},
+	abstract     = {
+		Antarctic krill is critical to the Antarctic ecosystem and the target of a
+		growing fishery. To minimize the impact of fishing on the ecosystem,
+		cost-effective monitoring is essential. In this study, we developed a method
+		to detect krill predators diving beneath fishing vessels. This allowed us to
+		analyze predator-vessel encounters at very large scales. We found that the
+		seasonality and distribution of encounters were highly predator-specific and
+		that existing protection measures were ineffective in protecting breeding
+		penguins during the summer. We therefore not only provide insights into the
+		overlap of predators and vessel in the krill fishery but also present an
+		approach to data collection that can inform fisheries management at low cost.
+		Antarctic krill is a keystone species in the Antarctic marine ecosystem and
+		the target of a growing fishery. Given the ecological importance of krill,
+		concerns have been raised about potential negative impacts of fishing on the
+		Southern Ocean ecosystem. Resource-efficient approaches to fisheries
+		monitoring are particularly valuable in this context due to the high costs
+		associated with data collection in Antarctica. In this study, we trained a
+		segmentation model (U-Net) to extract dives of air-breathing krill predators
+		from more than 30,000 h of active acoustic data collected by three krill
+		fishing vessels over six years. We were able to characterize the temporal and
+		spatial dynamics of predator-vessel co-occurrences, which aligned well with
+		the findings from more costly tracking studies. For example, we found that
+		encounters with whales consistently peaked in autumn around the Antarctic
+		Peninsula, when whales are building up fat reserves for their migration to
+		breeding grounds. We also demonstrated that protection measures, introduced
+		to protect breeding penguins at the Antarctic Peninsula, have simply shifted
+		penguin-vessel encounters to the South Orkney Islands, where the affected
+		colonies are not currently monitored. Our approach, results, and application
+		example demonstrate how acoustic data from fishing vessels can provide
+		important information to support fisheries management. As a by-product of
+		fishing operations, these data are cost-effective, offering unique temporal
+		and spatial coverage and providing a useful basis for rapid, low-level
+		assessments of the fishery’s interaction with the wider ecosystem. This is
+		particularly important given the unpredictable dynamics of krill fishery
+		management decision-making.
+	}
+}
