--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -1044,3 +1044,46 @@
 		management decision-making.
 	}
 }
+@article{MERLIN2025100361,
+	title        = {
+		Large-scale modelling wind damage vulnerability through combination of
+		high-resolution forest resources maps and {ForestGALES}
+	},
+	author       = {Morgane Merlin and Tommaso Locatelli and Barry Gardiner and Rasmus Astrup},
+	year         = 2025,
+	journal      = {Forest Ecosystems},
+	pages        = 100361,
+	doi          = {10.1016/j.fecs.2025.100361},
+	issn         = {2197-5620},
+	url          = {https://www.sciencedirect.com/science/article/pii/S2197562025000703},
+	keywords     = {
+		Wind, Natural disturbance, ForestGALES, Damage probability, Forest resource
+		map
+	},
+	abstract     = {
+		Assessing forest vulnerability to disturbances at a high spatial resolution
+		and for regional and national scales has become attainable with the
+		combination of remote sensing-derived high-resolution forest maps and
+		mechanistic risk models. This study demonstrated large-scale and
+		high-resolution modelling of wind damage vulnerability in Norway. The hybrid
+		mechanistic wind damage model, ForestGALES, was adapted to map the critical
+		wind speeds (CWS) of damage across Norway using a national forest attribute
+		map at a 16 m × 16 m spatial resolution. Parametrization of the model for the
+		Norwegian context was done using the literature and the National Forest
+		Inventory data. This new parametrization of the model for Norwegian forests
+		yielded estimates of CWS significantly different from the default
+		parametrization. Both parametrizations fell short of providing acceptable
+		discrimination of the damaged area following the storm of 19 November 2021 in
+		the central southern region of Norway when using unadjusted CWS. After
+		adjusting the CWS and the storm wind speeds by a constant factor, the
+		Norwegian parametrization provided acceptable discrimination and was thus
+		defined as suitable to use in future studies, despite the lack of field- and
+		laboratory experiments to directly derive parameters for Norwegian forests.
+		The windstorm event used for model validation in this study highlighted the
+		challenges of predicting wind damage to forests in landscapes with complex
+		topography. Future studies should focus on further developing ForestGALES and
+		new datasets describing extreme wind climates to better represent the wind
+		and tree interactions in complex topography, and predict the level of risk in
+		order to develop local climate-smart forest management strategies.
+	}
+}
