--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -1087,3 +1087,357 @@
 		order to develop local climate-smart forest management strategies.
 	}
 }
+
+@article{hattendorf_vectors_2025,
+	title        = {
+		Vectors, host range, and spatial distribution of \textit{{Dirofilaria} immitis}
+		and \textit{{D.} {repens}} in {Europe}: a systematic review
+	},
+	shorttitle   = {
+		Vectors, host range, and spatial distribution of \textit{Dirofilaria immitis}
+		and \textit{D. repens} in {Europe}
+	},
+	author       = {Hattendorf, Carolin and Lühken, Renke},
+	year         = 2025,
+	month        = jul,
+	journal      = {Infectious Diseases of Poverty},
+	volume       = 14,
+	number       = 1,
+	pages        = 58,
+	doi          = {10.1186/s40249-025-01328-2},
+	issn         = {2049-9957},
+	url          = {https://idpjournal.biomedcentral.com/articles/10.1186/s40249-025-01328-2},
+	urldate      = {2025-09-15},
+	abstract     = {
+		Abstract
+
+		Background
+
+		Dirofilaria immitis and D. repens are mosquito-borne nematodes with dogs as
+		primary hosts, but other mammalian species including humans can be also
+		infected. In the last century, circulation of both pathogens was
+		predominantly restricted to Southern Europe. However, different studies
+		indicated a potential establishment in Central, Eastern and Western parts of
+		Europe as an increasing threat to animal and human health. Therefore, we
+		conducted a systematic literature review of Dirofilaria data in Europe to
+		give a comprehensive overview of potential mosquito vectors and vertebrate
+		hosts, including the collection of different metadata (e.g. sampling year and
+		site), allowing to analyse the spread pattern of the parasites in Europe.
+
+		Methods
+
+		On 24 January 2022, we conducted a systematic literature review of all
+		available publications in the PubMed database reporting D. immitis and D.
+		repens screening in mosquitoes and mammalian vertebrates in Europe. We only
+		included acute infection of Dirofilaria spp., i.e. excluding studies only
+		screening antibodies, and in addition noted the travel history and the
+		accuracy of the sampling locations. These data were used to analyse the range
+		of potential vectors and hosts and for a comparison of the spatial
+		distribution between the twentieth and twenty-first century.
+
+		Results
+
+		Both nematodes appear to have a high overlap of Aedes , Anopheles and Culex
+		as potential vector species, which are abundant in Europe. Most published D.
+		immitis infections were reported in dogs, while D. repens predominantly were
+		reported in humans. Dirofilaria immitis infections were detected in a wider
+		range of wild and zoo animals. Compared to the last century, many more
+		countries especially in Central Europe were affected by Dirofilaria spp.
+		circulation, illustrating a significant spread over the last 20 years.
+
+		Conclusions
+
+		Our findings suggest that D. immitis and D. repens are a growing health
+		concern for animals and humans in Europe. Continuous globalisation and
+		climate warming will probably lead to a further spread and increased
+		circulation in the future. All data are made available open access, which
+		will enable further analysis.
+
+		Graphical Abstract
+	},
+	language     = {en}
+}
+@article{rock_spatiotemporal_2025,
+	title        = {
+		Spatiotemporal drivers of water quality and phytoplankton communities in a
+		cyanobacteria-dominated reservoir provide management insights
+	},
+	author       = {
+		Rock, Linnea A. and Fetzer, William W. and Patterson, Lindsay S. and Sillen,
+		Samuel J. and Steg, Ron and Walters, Annika W. and Collins, Sarah M.
+	},
+	year         = 2025,
+	month        = jun,
+	journal      = {Environmental Monitoring and Assessment},
+	volume       = 197,
+	number       = 7,
+	pages        = 795,
+	doi          = {10.1007/s10661-025-14258-1},
+	issn         = {1573-2959},
+	url          = {https://link.springer.com/10.1007/s10661-025-14258-1},
+	urldate      = {2025-09-15},
+	abstract     = {
+		Abstract Reservoirs serve critical roles providing drinking water,
+		irrigation, flood control, hydropower, recreation, fisheries, and aquatic
+		habitat. Yet their physical position, complex shape, and large watersheds
+		make reservoirs especially susceptible to eutrophication and harmful algal
+		bloom (HAB) production. Boysen Reservoir, WY, is a high priority for
+		proactive nutrient management because it is an important source for drinking
+		water and recreation, and has a history of toxic cyanobacterial blooms. We
+		combined four years of comprehensive monitoring efforts by state and federal
+		agencies to characterize the spatiotemporal patterns of nutrient inflow,
+		internal water quality dynamics, and phytoplankton community shifts in Boysen
+		Reservoir. We found nutrient inflow was hydrologically driven, with snowmelt
+		runoff transporting high nutrient loads. Our findings suggest physicochemical
+		and nutrient conditions of the reservoir were strongly different between the
+		furthest reaches of the reservoir, but less variable among the intermediate
+		sites. Space did not play a role in phytoplankton community dynamics, but
+		time was an important factor. Cyanobacteria dominated phytoplankton
+		communities by mid-summer across the reservoir and were driven mainly by
+		temporal physicochemical conditions, like stratification and water
+		temperature. The two most dominant phytoplankton taxa across the four years
+		of sampling were N-fixing, toxin producing cyanobacteria. Extensive
+		monitoring efforts and data analyses can illuminate strategies to safeguard
+		water resources via understanding the drivers of water quality changes and
+		HAB production.
+	},
+	language     = {en}
+}
+@article{kiel_snowmelt_2025,
+	title        = {
+		Snowmelt timing alters the phenology but not the performance of an understory
+		spring ephemeral plant
+	},
+	author       = {Kiel, Nathan G. and Watts, David A. and Young, Amanda B. and Vellend, Mark},
+	year         = 2025,
+	month        = sep,
+	journal      = {Journal of Ecology},
+	volume       = 113,
+	number       = 9,
+	pages        = {2289--2300},
+	doi          = {10.1111/1365-2745.70099},
+	issn         = {0022-0477, 1365-2745},
+	url          = {https://besjournals.onlinelibrary.wiley.com/doi/10.1111/1365-2745.70099},
+	urldate      = {2025-09-15},
+	abstract     = {
+		Abstract
+
+		Spatial and temporal variation in fine‐scale environmental conditions can
+		influence local population abundance and structure ecological communities. In
+		temperate deciduous forests, some herbaceous plant species, including some
+		spring ephemerals, locally cluster around the bases of canopy trees. Despite
+		the conspicuousness of this pattern, no experimental tests have been
+		conducted to discriminate among hypothesized mechanisms.
+
+		We tested whether earlier spring snowmelt in rings around the base of
+		deciduous trees (‘thaw circles’) was responsible for improved plant
+		performance and greater local abundance via advanced spring phenology and
+		longer growing seasons (the time between emergence and either senescence or
+		canopy closure). Individuals of Dutchman's breeches ( Dicentra cucullaria ),
+		a common spring ephemeral plant, were transplanted into a fully factorial
+		field experiment of manipulated snowmelt timing (early vs. late) and tree
+		proximity (near vs. far) in a temperate deciduous forest (Québec, Canada).
+		Spring phenology and plant performance (peak leaf‐bearing stem abundance and
+		total leaf area) were tracked for 2 years.
+
+		Advanced spring emergence with early snowmelt, in both naturally occurring
+		thaw circles and where snow was experimentally removed, lengthened growing
+		seasons by 10\%–19\%, a meaningful extension for spring‐flowering herbs with
+		a short window of activity. Surprisingly, Dutchman's breeches transplanted
+		near trees experienced lengthened growing seasons as well, even after
+		accounting for snowmelt timing and stem abundance. However, leaf area and
+		stem abundance increased only with close tree proximity, with no effects of
+		snowmelt timing on these aspects of performance.
+
+		Synthesis . Growing season length was disconnected from Dutchman's breeches'
+		performance, with early snowmelt likely not the proximate cause of greater
+		local abundance of this spring ephemeral herb around the base of deciduous
+		trees. Instead, other factors associated with tree proximity, including
+		edaphic conditions and microclimate buffering, may play a primary role in
+		Dutchman's breeches' local distribution. Experimental manipulation of
+		fine‐scale environmental conditions and resource availability will prove
+		increasingly informative for understanding population dynamics and community
+		structuring in an era of rapid global change.
+	},
+	language     = {en}
+}
+@article{perez-giron_predicting_2025,
+	title        = {
+		Predicting climate-related compositional shifts in nut-producing species that
+		are important for bears during hyperphagia
+	},
+	author       = {
+		Pérez-Girón, José Carlos and López-Bao, José Vicente and Díaz-Varela, Emilio
+		and Álvarez-Álvarez, Pedro
+	},
+	year         = 2025,
+	month        = aug,
+	journal      = {Frontiers in Forests and Global Change},
+	volume       = 8,
+	pages        = 1624612,
+	doi          = {10.3389/ffgc.2025.1624612},
+	issn         = {2624-893X},
+	url          = {https://www.frontiersin.org/articles/10.3389/ffgc.2025.1624612/full},
+	urldate      = {2025-09-15},
+	abstract     = {
+		Introduction
+
+		Climate change represents an escalating threat to wildlife globally,
+		disrupting ecosystems and altering species interactions. Key nut-producing
+		forest species in the Cantabrian Mountains may be affected, with consequences
+		for Cantabrian brown bears ( Ursus arctos ) during hyperphagia. Understanding
+		such changes may help to improve conservation strategies to ensure that bears
+		may be able to adapt to changing environmental conditions.
+
+		Methods With this aim, we assessed the current and future habitat suitability
+		of all nut-producing trees in the Cantabrian Mountains. We fitted species
+		distribution models using a down-sampling random forest ensemble approach to
+		create comprehensive maps and species flows, identifying key hotspots of nut
+		production under the SSP3-7.0 and SSP5-8.5 climate change scenarios. Based on
+		bear mobility patterns, we identified areas where individuals lacked access
+		to at least two fruit-producing species, thereby identifying potential areas
+		of nuts shortage for bears during hyperphagia.
+
+		Results and discussion
+
+		We anticipate a potential decline in beech ( Fagus sylvatica ) and Atlantic
+		oaks ( Quercus petraea ), with a compositional shift towards thermophilic
+		species, such as sweet chestnuts ( Castanea sativa ) and Mediterranean oaks
+		(e.g. Quercus ilex ). The area unsuitable for any nut-producing species is
+		likely to increase over time, reaching 25\% \% within the current bear range.
+		The diversity of nut-producing species is projected to decline over time,
+		leaving large areas within the bear’s range with access to only one or two
+		species. Bears may be able to gain access to food resources owing to their
+		dietary plasticity and their ability to move and track energy-rich food
+		resources. Ensuring the long-term accessibility of nuts to bears in some
+		areas could be based on the establishment of Chestnut plantations apart from
+		human settlements, as well as actions to enhance fruiting for oaks, such as
+		the case of Pyrenean oaks.
+	}
+}
+@article{fu_integrating_2025,
+	title        = {
+		Integrating hydrological impacts for cost-effective dryland ecological
+		restoration
+	},
+	author       = {
+		Fu, Fengyu and Wang, Shuai and Wu, Xutong and Chen, Shiyin and Tan, Zimin and
+		Ye, ChongChong and Grünzweig, José M.
+	},
+	year         = 2025,
+	month        = aug,
+	journal      = {Communications Earth \& Environment},
+	volume       = 6,
+	number       = 1,
+	pages        = 667,
+	doi          = {10.1038/s43247-025-02649-8},
+	issn         = {2662-4435},
+	url          = {https://www.nature.com/articles/s43247-025-02649-8},
+	urldate      = {2025-09-15},
+	language     = {en}
+}
+@article{kutza_endemic_2025,
+	title        = {
+		Endemic and invasion dynamics of wild tomato species on the {Galápagos}
+		{Islands}, across two centuries of collection records
+	},
+	author       = {Kutza, Alex D. and Hert, Zoe L. and Moyle, Leonie C.},
+	year         = 2025,
+	month        = jun,
+	journal      = {New Phytologist},
+	pages        = {nph.70321},
+	doi          = {10.1111/nph.70321},
+	issn         = {0028-646X, 1469-8137},
+	url          = {https://nph.onlinelibrary.wiley.com/doi/10.1111/nph.70321},
+	urldate      = {2025-09-15},
+	abstract     = {
+		Summary
+
+		We aggregated digitized herbarium and other collection records – spanning
+		{\textgreater} 225 yr since 1795 – to assess the biological, geographical,
+		and historical factors shaping distributions of three wild tomato species on
+		the Galápagos Islands, and to infer future threats to the two endemic species
+		( Solanum cheesmaniae and Solanum galapagense ) and risks posed by their
+		invasive congener ( Solanum pimpinellifolium ).
+
+		Combining {\textgreater} 400 unique geolocated Galápagos records with
+		bioclimate data and species distribution modelling, we quantified the
+		geo‐spatial distribution of each species, bracketed the historical timing and
+		location of introductions of the invasive species, characterized species
+		bioclimate envelopes, and projected suitable habitat overlap.
+
+		We infer that dispersal limitation and alternative selective histories shape
+		current species distributions, and that anthropogenic change has and will
+		continue to have different impacts on the two endemic species – closely
+		associated with their different geographic and environmental distributions.
+		We also identify plausible avenues for, and limits to, future invasive
+		expansion.
+
+		These data vastly extend the temporal and spatial reach of our direct
+		historical inferences, provide a critical complement to genomic analyses of
+		contemporary Galápagos populations, and demonstrate that scientific
+		collections are especially valuable for interpreting factors shaping species
+		distributions on high‐endemism islands with recent rapid environmental
+		change.
+	},
+	language     = {en}
+}
+@article{riley_biomonitoring_2025,
+	title        = {
+		Biomonitoring 2.0 {Refined}: observing local change through
+		metaphylogeography using a community-based {eDNA} metabarcoding monitoring
+		network
+	},
+	shorttitle   = {Biomonitoring 2.0 {Refined}},
+	author       = {
+		Riley, Andrew C. and Wright, Michael and Porter, Teresita M. and Maitland, V.
+		Carley and Baird, Donald J. and Hajibabaei, Mehrdad
+	},
+	year         = 2025,
+	month        = jul,
+	journal      = {BMC Biology},
+	volume       = 23,
+	number       = 1,
+	pages        = 187,
+	doi          = {10.1186/s12915-025-02284-x},
+	issn         = {1741-7007},
+	url          = {https://bmcbiol.biomedcentral.com/articles/10.1186/s12915-025-02284-x},
+	urldate      = {2025-09-15},
+	abstract     = {
+		Abstract
+
+		Background Biological data at different levels of organization is essential
+		to support actions to mitigate the current biodiversity crisis. DNA
+		metabarcoding is an established method to detect species/genus level taxa
+		from bulk samples leading the way for a Biomonitoring 2.0 framework.
+		Biomonitoring 2.0 Refined adds another dimension to Biomonitoring
+		2.0—high-throughput, scalable DNA metabarcoding with a higher resolution at
+		the intraspecific level. Intraspecific diversity is key to understanding the
+		distribution and movement of local populations for conservation efforts.
+		Gaining reliable intraspecific information from metabarcoding data, however,
+		is challenging due to qualitative/quantitative issues that can impact
+		validity of the inference.
+
+		Results
+
+		Samples collected for the STREAM community-based monitoring project were used
+		to perform an intraspecific genetic variation analysis on benthic arthropods.
+		We targeted two non-overlapping cytochrome c oxidase subunit 1 mitochondrial
+		DNA amplicons to assess the reproducibility of our results. Samples from the
+		Rocky Mountains were grouped into four regions separated by mountain ranges.
+		Significant separation (PERMANOVA, p value {\textless} 0.05) of Sørensen
+		dissimilarity between regions was observed for community and intraspecific
+		levels, fitting the expectation that mountains are barriers to dispersal. Two
+		of the regions showed significant spatial structuring (Mantel test, p
+		value {\textless} 0.05) at the intraspecific level, while all regions showed
+		significant structuring at the community level. Results were consistent
+		across both amplicons.
+
+		Conclusions We show that DNA metabarcoding is applicable to intraspecific
+		diversity analysis and it is robust to different amplicons. This paves the
+		way for Biomonitoring 2.0 Refined, which can provide much needed fine-scale
+		biodiversity data for ecological assessments and conservation.
+	},
+	language     = {en}
+}
+
